fable/test/valid/common_0.f
      program prog
      common /com/ num
      write(6, *) num
      end
