fable/test/semantic_error/parameter_in_common.f
      program prog
      parameter(num=0)
      common /com/ num
      end
